# telegram_app_wish_list

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  amvera.yml  atlas.hcl  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-check.yml  run-tests.yml
app/: application.py  config.py  main.py
app/controllers/: __init__.py  gifts.py  item.py  user.py  users.py
app/core/: __init__.py  auth.py  config.py  db.py  dependencies.py  logger.py  security.py
app/core/config/: app.py  bot.py  config.py  database.py  jwt.py  logger.py
app/core/database/: __init__.py  sqlalchemy_config.py
app/core/security/: __init__.py  jwt_auth.py  telegram_auth.py
app/dependencies/: __init__.py  provide_access_jwt_auth.py  provide_gift_service.py  provide_telegram_init_data.py  provide_user_service.py
app/domain/: __init__.py  gifts.py  users.py
app/dto/: __init__.py  gifts.py  item.py  user.py  users.py
app/exceptions/: database.py  handlers.py  http.py
app/repositories/: __init__.py  base.py  gifts.py  users.py
app/schemas/: users.py
app/services/: __init__.py  gifts.py  users.py
app/static/: app.js  index.html  style.css
app/templates/: index.html
app/utils/: __init__.py  integrity_error_handler.py
database_schema/: schema.pg.hcl
migrations/: 20251215205013_initial.sql  20251223192138_gifts_add_price_note_columns.sql  20251223214759_update_timestamt_types.sql  20260124120247_create_avatar_url_instead_of_birthday.sql  20260129194855_create_friend_requests_table.sql  20260201173405_Create_gifts_reservations_table.sql  20260202193129_inrease_avatar_url_lenght.sql  20260220194055_make nullable user fields.sql  20260302194719_Add unique constraint to gift reservations table.sql  20260311095909_remove unique constraint from tg_username.sql  atlas.sum
static/: index.html
tests/integration_tests/: conftest.py
tests/integration_tests/repositories_test/: gift_test.py  user_test.py
tests/integration_tests/services_test/: gift_test.py  user_test.py
tests/unit_tests/: conftest.py  gift_domain_test.py  handle_integrity_error_message_test.py  jwt_auth_test.py  telegram_auth_test.py  user_domain_test.py
