[project]
name = "telegram-app-wish-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "litestar[standard]>=2.18.0",
    "mypy>=1.19.0",
    "pip>=25.3",
    "pre-commit>=4.5.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
mypy_path = "app"
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_unused_ignores = false
strict = true
files = ["app"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
src = ["app"]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213", "COM812", "Q000", "Q003", "PLR0913", "INP001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
