[project]
name = "telegram-app-wish-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "litestar[standard]>=2.18.0",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.ruff]
src = ["app"]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D213", "COM812","EM101", "EM102",
    "Q000", "Q003", "PLR0913", "INP001", "TRY003", "TD002", "TD003", "FIX002"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ty.environment]
root = ["./app"]
